refactor: use langue-contenu schema, rename StructureByIdMesuresInnerLabelInner into LocalisedLabel, set null for empty fields